10.3.0:
    INFO: Merry Christmas!
    NEW: Added Snow to carts!
    NEW: Added Crowbar of Seasons, used to switch carts to Christmas or Halloween mode, found in Workshops or in Gift and Pumpkin Carts.
    NEW: Restored Creosote and Steam blocks. (contribution by liach)
    NEW: Added Creosote potion effect that harms spiders when thrown. (contribution by liach)
    CHANGE: "NeedsRefuel" routing condition now looks at the entire train and considers Worldspike Carts as well.

10.2.0
    NEW: Metal Posts and Platforms have been restored. Other variants will come later.
    FIX: Boxes now respond correctly to redstone. (contribution by liach)
    FIX: Improve Bore Head enchants and tool behavior. (contribution by liach)
    FIX: Fixed village bankrupting himself. (contribution by liach)

10.2.0-alpha-15
    FIX: Fix Token Signals in SMP.

10.2.0-alpha-14
    NEW: Token Signals have been added! Use to make junctions simpler and diagonals viable.
    NEW: Jukebox Cart, with moving sounds! (contribution by liach)
    NEW: Whistles move with Locomotives! (contribution by liach)
    NEW: Added Bronze Borehead. (contribution by liach)
    NEW: Added support for comments in Routing Tables: "//" or "#"
    FIX: Fix Bore infinite loop.
    FIX: Fix routing crash.

10.2.0-alpha-9
    NEW: Ported Block Signals and Distant Signals.
    FIX: Fix IC2 Feeder breaking. (contribution by liach)
    FIX: Fix Tank Cart issues. (contribution by liach)
    FIX: Various other minor fixes by liach.

10.2.0-alpha-8
    NEW: Added Nickel-Iron and Nickel-Zinc batteries. Use them to help maintain your charge network.
    FIX: Fix Tank Carts.

10.2.0-alpha-7
    NEW: Added Logbook, it records any player that passes within a 16 block radius of the block and they day they visited. It can only be broken by the owner.
    FIX: Fix Train Dispenser and Locomotive matching. Issue #1262
    FIX: Fix some annoying edge cases and faulty assumptions in the Item Loader code.

10.2.0-alpha-6